@@ -2403,7 +2403,7 @@ EOF;
 function create_wificonf_from_database(&$out) {
    $data=array();
    $sql = <<<EOF
-SELECT `WIFI_SSID`, `WIFI_KEY_TYPE`, `WIFI_PASSWORD` FROM `configuration` WHERE `id` = 1;
+SELECT `WIFI_SSID`, `WIFI_KEY_TYPE`, `WIFI_PASSWORD`, `WIFI_IP` FROM `configuration` WHERE `id` = 1;
 EOF;
 
    $db=db_priv_pdo_start();
@@ -2427,6 +2427,7 @@ EOF;
    $data[]="SSID:".$res['WIFI_SSID'];
    $data[]="CLE:".$res['WIFI_KEY_TYPE'];
    $data[]="PWD:".$res['WIFI_PASSWORD'];
+   $data[]="IP:".$res['WIFI_IP'];
    return $data;
 }
 /// }}}
