@@ -36,6 +36,12 @@ $pop_up_message="";
 $pop_up_error_message="";
 $nb_plugs=get_configuration("NB_PLUGS",$main_error);
 $plugs_infos=get_plugs_infos($nb_plugs,$main_error);
+$wifi_ip=get_configuration("WIFI_IP",$main_error);
+
+if((!isset($wifi_ip))||(empty($wifi_ip))) {
+   $wifi_ip="192.168.0.200";
+}
+
 
 
 // Trying to find if a cultibox SD card is currently plugged and if it's the case, get the path to this SD card
