@@ -528,6 +528,12 @@ $(document).ready(function(){
       <td class="conf-alarm-field"><input type="text" size="15" name="wifi_password_confirm" id="wifi_password_confirm" value="" /></td>
       <td><div id="error_wifi_password_confirm" style="display:none" class="error_field"><img src='/cultibox/main/libs/img/arrow_error.png' alt=''><?php echo __('ERROR_PASSWORD_VALUE'); ?></div></td>
    </tr>
+   <tr>
+      <td class="conf-marge"></td>
+      <td class="conf-marge-td"><?php echo __('CONFIGURE_WIFI_IP'); ?>:<img src="main/libs/img/infos.png" alt="" title="<?php echo __('TOOLTIP_WIFI_IP'); ?>" /></td>
+      <td class="conf-alarm-field"><input type="text" size="15" name="wifi_ip" id="wifi_ip" value="<?php echo $wifi_ip; ?>" /></td>
+      <td><div id="error_wifi_ip" style="display:none" class="error_field"><img src='/cultibox/main/libs/img/arrow_error.png' alt=''><?php echo __('ERROR_WIFI_IP'); ?></div></td>
+   </tr>
 
 </table>
 </div>
