@@ -37,6 +37,7 @@
 
 <script>
     nb_plugs=<?php echo(json_encode($nb_plugs)); ?>
+    wifi_ip=<?php echo(json_encode($wifi_ip)); ?>
 </script>
 
 <br />
